--- a/template.yaml
+++ b/template.yaml
@@ -18,10 +18,17 @@ Resources:
         - AWSXrayWriteOnlyAccess
         - S3CrudPolicy:
             BucketName: !Ref objectStore86870FA0
+        - Statement:
+            - Effect: Allow
+              Action:
+                - s3:PutObjectAcl
+              Resource:
+                - !Sub ${objectStore86870FA0.Arn}/*
       Environment:
         Variables:
           BUCKET_NAME: !Ref objectStore86870FA0
           BUCKET_ARN: !GetAtt objectStore86870FA0.Arn
+          XDG_CONFIG_HOME: /tmp/.config
     Metadata:
       StackeryName: deployFrontEnd
   function5B4675E7DeployTrigger:
