update s3 resource for web hosting

--- a/template.yaml
+++ b/template.yaml
@@ -40,6 +40,10 @@ Resources:
     Type: AWS::S3::Bucket
     Properties:
       BucketName: !Sub ${AWS::StackName}-objectstore86870fa0
+      AccessControl: PublicRead
+      WebsiteConfiguration:
+        IndexDocument: index.html
+        ErrorDocument: index.html
     Metadata:
       StackeryName: React App Host
 Parameters:
