--- a/template.yaml
+++ b/template.yaml
@@ -58,6 +58,7 @@ Resources:
             QueryString: false
           TargetOriginId: StackeryCDN
           ViewerProtocolPolicy: redirect-to-https
+        DefaultRootObject: index.html
         Enabled: true
         PriceClass: PriceClass_100
         Origins:
