--- a/template.yaml
+++ b/template.yaml
@@ -29,13 +29,15 @@ Resources:
           BUCKET_NAME: !Ref objectStore86870FA0
           BUCKET_ARN: !GetAtt objectStore86870FA0.Arn
           XDG_CONFIG_HOME: /tmp/.config
+      Events:
+        tableF505F6E3:
+          Type: DynamoDB
+          Properties:
+            Stream: !GetAtt tableF505F6E3.StreamArn
+            StartingPosition: TRIM_HORIZON
+            BatchSize: 1
     Metadata:
       StackeryName: deployFrontEnd
-  function5B4675E7DeployTrigger:
-    Type: Custom::FunctionDeployTrigger
-    Properties:
-      ServiceToken: !GetAtt function5B4675E7.Arn
-      StackeryDeploymentTimestamp: !Ref StackeryDeploymentTimestamp
   objectStore86870FA0:
     Type: AWS::S3::Bucket
     Properties:
@@ -46,46 +48,21 @@ Resources:
         ErrorDocument: index.html
     Metadata:
       StackeryName: React App Host
-  cdn28E7E29D:
-    Type: AWS::CloudFront::Distribution
+  tableF505F6E3:
+    Type: AWS::DynamoDB::Table
     Properties:
-      DistributionConfig:
-        DefaultCacheBehavior:
-          Compress: true
-          ForwardedValues:
-            Cookies:
-              Forward: none
-            QueryString: false
-          TargetOriginId: StackeryCDN
-          ViewerProtocolPolicy: redirect-to-https
-        DefaultRootObject: index.html
-        Enabled: true
-        PriceClass: PriceClass_100
-        Origins:
-          - DomainName: !GetAtt objectStore86870FA0.DomainName
-            Id: StackeryCDN
-            S3OriginConfig:
-              OriginAccessIdentity: !Sub origin-access-identity/cloudfront/${cdn28E7E29DOriginAccessIdentity}
-    Metadata:
-      StackeryName: Our CDN
-  cdn28E7E29DOriginAccessIdentity:
-    Type: AWS::CloudFront::CloudFrontOriginAccessIdentity
-    Properties:
-      CloudFrontOriginAccessIdentityConfig:
-        Comment: Stackery
-  cdn28E7E29DBucketPolicy:
-    Type: AWS::S3::BucketPolicy
-    Properties:
-      Bucket: !Ref objectStore86870FA0
-      PolicyDocument:
-        Statement:
-          - Effect: Allow
-            Principal:
-              AWS: !Sub arn:aws:iam::cloudfront:user/CloudFront Origin Access Identity ${cdn28E7E29DOriginAccessIdentity}
-            Action: s3:GetObject
-            Resource: !Sub
-              - ${BucketArn}/*
-              - BucketArn: !GetAtt objectStore86870FA0.Arn
+      AttributeDefinitions:
+        - AttributeName: id
+          AttributeType: S
+      KeySchema:
+        - AttributeName: id
+          KeyType: HASH
+      ProvisionedThroughput:
+        ReadCapacityUnits: 5
+        WriteCapacityUnits: 5
+      StreamSpecification:
+        StreamViewType: NEW_AND_OLD_IMAGES
+      TableName: !Sub ${AWS::StackName}-tableF505F6E3
 Parameters:
   StackeryStackTagName:
     Type: String
@@ -93,6 +70,3 @@ Parameters:
   StackeryEnvironmentTagName:
     Type: String
     Description: Environment Name (injected by Stackery at deployment time)
-  StackeryDeploymentTimestamp:
-    Type: Number
-    Description: Stackery Deployment preparation timestamp in milliseconds Since Epoch (injected by Stackery at deployment time)
