--- a/template.yaml
+++ b/template.yaml
@@ -1,10 +1,10 @@
 AWSTemplateFormatVersion: 2010-09-09
 Transform: AWS::Serverless-2016-10-31
 Resources:
-  function5B4675E7:
+  deployFrontEnd:
     Type: AWS::Serverless::Function
     Properties:
-      FunctionName: !Sub ${AWS::StackName}-function5B4675E7
+      FunctionName: !Sub ${AWS::StackName}-deployFrontEnd
       Description: !Sub
         - Stackery Stack ${StackeryStackTagName} Environment ${StackeryEnvironmentTagName} Function ${ResourceName}
         - ResourceName: deployFrontEnd
@@ -17,36 +17,36 @@ Resources:
       Policies:
         - AWSXrayWriteOnlyAccess
         - S3CrudPolicy:
-            BucketName: !Ref objectStore86870FA0
+            BucketName: !Ref FrontEnd
         - Statement:
             - Effect: Allow
               Action:
                 - s3:PutObjectAcl
               Resource:
-                - !Sub ${objectStore86870FA0.Arn}/*
+                - !Sub ${FrontEnd.Arn}/*
       Environment:
         Variables:
-          BUCKET_NAME: !Ref objectStore86870FA0
-          BUCKET_ARN: !GetAtt objectStore86870FA0.Arn
+          BUCKET_NAME: !Ref FrontEnd
+          BUCKET_ARN: !GetAtt FrontEnd.Arn
           XDG_CONFIG_HOME: /tmp/.config
     Metadata:
       StackeryName: deployFrontEnd
-  function5B4675E7DeployTrigger:
+  deployFrontEndDeployTrigger:
     Type: Custom::FunctionDeployTrigger
     Properties:
-      ServiceToken: !GetAtt function5B4675E7.Arn
-      StackeryDeploymentTimestamp: !Ref StackeryDeploymentTimestamp
-  objectStore86870FA0:
+      ServiceToken: !GetAtt deployFrontEnd.Arn
+      DeploymentTimestamp: !Ref DeploymentTimestamp
+  FrontEnd:
     Type: AWS::S3::Bucket
     Properties:
-      BucketName: !Sub ${AWS::StackName}-objectstore86870fa0
+      BucketName: !Sub ${AWS::StackName}-frontend
       AccessControl: PublicRead
       WebsiteConfiguration:
         IndexDocument: index.html
         ErrorDocument: index.html
     Metadata:
       StackeryName: React App Host
-  cdn28E7E29D:
+  cdn:
     Type: AWS::CloudFront::Distribution
     Properties:
       DistributionConfig:
@@ -62,21 +62,16 @@ Resources:
         Enabled: true
         PriceClass: PriceClass_100
         Origins:
-          - DomainName: !GetAtt objectStore86870FA0.DomainName
+          - DomainName: !GetAtt FrontEnd.DomainName
             Id: StackeryCDN
             S3OriginConfig:
               OriginAccessIdentity: !Sub origin-access-identity/cloudfront/${cdn28E7E29DOriginAccessIdentity}
     Metadata:
       StackeryName: Our CDN
-  cdn28E7E29DOriginAccessIdentity:
-    Type: AWS::CloudFront::CloudFrontOriginAccessIdentity
-    Properties:
-      CloudFrontOriginAccessIdentityConfig:
-        Comment: Stackery
-  cdn28E7E29DBucketPolicy:
+  cdnBucketPolicy:
     Type: AWS::S3::BucketPolicy
     Properties:
-      Bucket: !Ref objectStore86870FA0
+      Bucket: !Ref FrontEnd
       PolicyDocument:
         Statement:
           - Effect: Allow
@@ -85,7 +80,12 @@ Resources:
             Action: s3:GetObject
             Resource: !Sub
               - ${BucketArn}/*
-              - BucketArn: !GetAtt objectStore86870FA0.Arn
+              - BucketArn: !GetAtt FrontEnd.Arn
+  cdnOriginAccessIdentity:
+    Type: AWS::CloudFront::CloudFrontOriginAccessIdentity
+    Properties:
+      CloudFrontOriginAccessIdentityConfig:
+        Comment: Stackery
 Parameters:
   StackeryStackTagName:
     Type: String
@@ -93,6 +93,6 @@ Parameters:
   StackeryEnvironmentTagName:
     Type: String
     Description: Environment Name (injected by Stackery at deployment time)
-  StackeryDeploymentTimestamp:
+  DeploymentTimestamp:
     Type: Number
-    Description: Stackery Deployment preparation timestamp in milliseconds Since Epoch (injected by Stackery at deployment time)
+    Description: Deployment preparation timestamp in milliseconds Since Epoch (injected by Stackery at deployment time)
