--- a/src/deployFrontEnd/package.json
+++ b/src/deployFrontEnd/package.json
@@ -1,11 +1,13 @@
 {
-  "name": "deployFrontEnd",
+  "name": "deployfrontend",
   "version": "1.0.0",
   "dependencies": {
-    "aws-sdk": "~2",
     "cfn-custom-resource": "^4.0.6",
     "glob": "^7.1.3",
     "mime-types": "^2.1.20",
     "npm": "^6.4.1"
+  },
+  "devDependencies": {
+    "aws-sdk": "~2"
   }
 }
